# newtype-uuid

./: CHANGELOG.md  Cargo.toml  Justfile  README.md  README.tpl  release.toml
.cargo/: config.toml
.claude/: settings.json
.github/workflows/: ci.yml  coverage.yml  docs.yml  release.yml
crates/custom-crate-tests/: Cargo.toml  README.md
crates/custom-crate-tests/src/: lib.rs  ui.rs
crates/custom-crate-tests/tests/: snapshot.rs
crates/custom-crate-tests/tests/fixtures/invalid/: crate_name_as_string.rs  crate_name_as_string.stderr  missing_crate_value.rs  missing_crate_value.stderr  nonexistent_crate.rs  nonexistent_crate.stderr
crates/custom-crate-tests/tests/fixtures/invalid/output/: nonexistent_crate.output.rs
crates/custom-crate-tests/tests/fixtures/valid/: custom_crate_name.rs  custom_crate_with_schemars.rs
crates/custom-crate-tests/tests/fixtures/valid/output/: custom_crate_name.output.rs  custom_crate_with_schemars.output.rs
crates/integration-tests/: Cargo.toml  README.md
crates/integration-tests/outputs/: schema-rust-with-extension.rs  schema-rust-with-replace.rs  schema-rust.rs  typed-uuid-openapi.json  typed-uuid-rust.rs  typed-uuid-schema.json
crates/integration-tests/src/: derive.rs  json_schema.rs  lib.rs  proptests.rs  snapshot_utils.rs  ui.rs
crates/integration-tests/tests/: snapshot.rs
crates/integration-tests/tests/fixtures/invalid/: duplicate_def.rs  duplicate_def.stderr  empty_macro.rs  empty_macro.stderr  invalid_kind_name.rs  invalid_kind_name.stderr  invalid_settings.rs  invalid_settings.stderr  invalid_syntax.stderr  missing_kinds.rs  missing_kinds.stderr
crates/integration-tests/tests/fixtures/invalid/output/: duplicate_def.output.rs  invalid_kind_name.output.rs
crates/integration-tests/tests/fixtures/valid/: basic.rs  complex_names.rs  empty_kinds.rs  schemars08_unconditional.rs  with_settings.rs
crates/integration-tests/tests/fixtures/valid/output/: basic.output.rs  complex_names.output.rs  schemars08_unconditional.output.rs  with_settings.output.rs
crates/newtype-uuid/: Cargo.toml  README.md  build.rs
crates/newtype-uuid-derive/: Cargo.toml
crates/newtype-uuid-derive/src/: lib.rs
crates/newtype-uuid-macros/: CHANGELOG.md  Cargo.toml  README.md
crates/newtype-uuid-macros/examples/: basic-macro.rs  basic_usage.rs
crates/newtype-uuid-macros/src/: lib.rs
crates/newtype-uuid-macros/src/internals/: error_store.rs  imp.rs  mod.rs
crates/newtype-uuid-macros/tests/: integration.rs
crates/newtype-uuid-macros/tests/fixtures/invalid/: invalid_kind_name.rs  invalid_settings.rs  invalid_settings.stderr  invalid_syntax.rs
crates/newtype-uuid-macros/tests/fixtures/valid/: schemars08_unconditional.rs  with_settings.rs
crates/newtype-uuid/src/: lib.rs
e2e-example/: README.md
e2e-example/e2e-kinds/: Cargo.toml  README.md
e2e-example/e2e-kinds/src/: lib.rs
e2e-example/e2e-schema-consumer/: Cargo.toml  README.md
e2e-example/e2e-schema-consumer/src/: lib.rs
e2e-example/e2e-schema-producer/: Cargo.toml  README.md
e2e-example/e2e-schema-producer/src/: lib.rs
e2e-example/e2e-schema-producer/tests/output/: assignment-schema.json
rustdoc/: crates.js  help.html  search-index.js  settings.html  src-files.js
rustdoc/bitflags/: all.html  index.html  macro.bitflags.html  macro.bitflags_match.html  struct.Flag.html  trait.Bits.html  trait.Flags.html
rustdoc/custom_crate_tests/: all.html  index.html
rustdoc/dyn_clone/: all.html  fn.arc_make_mut.html  fn.clone.html  fn.clone_box.html  fn.rc_make_mut.html  index.html  macro.clone_trait_object.html  trait.DynClone.html
rustdoc/e2e_kinds/: all.html  enum.OrganizationKind.html  enum.UserKind.html  index.html  sidebar-items.js  type.OrganizationUuid.html  type.UserUuid.html
rustdoc/e2e_schema_consumer/: all.html  index.html  sidebar-items.js  struct.Assignment.html
rustdoc/e2e_schema_producer/: all.html  index.html  sidebar-items.js  struct.Assignment.html  type.OrganizationUuid.html  type.UserUuid.html
rustdoc/expectorate/: all.html  fn.assert_contents.html  index.html  sidebar-items.js
rustdoc/getrandom/: all.html  fn.getrandom.html  fn.getrandom_uninit.html  index.html  struct.Error.html
rustdoc/integration_tests/: all.html  index.html  sidebar-items.js
rustdoc/itoa/: all.html  index.html  struct.Buffer.html  trait.Integer.html
rustdoc/libc/: all.html  constant.ABDAY_1.html  constant.ABDAY_2.html  constant.ABDAY_3.html  constant.ABDAY_4.html  constant.ABDAY_5.html  constant.ABDAY_6.html  constant.ABDAY_7.html  constant.ABMON_1.html  constant.ABMON_10.html  constant.ABMON_11.html  constant.ABMON_12.html  constant.ABMON_2.html  constant.ABMON_3.html  constant.ABMON_4.html  constant.ABMON_5.html  constant.ABMON_6.html  constant.ABMON_7.html  constant.ABMON_8.html  constant.ABMON_9.html  constant.ABS_CNT.html  constant.ABS_MAX.html  constant.ACCOUNTING.html  constant.ADDR_COMPAT_LAYOUT.html  constant.ADDR_LIMIT_32BIT.html  constant.ADDR_LIMIT_3GB.html  constant.ADDR_NO_RANDOMIZE.html  constant.ADFS_SUPER_MAGIC.html  constant.ADJ_ESTERROR.html  constant.ADJ_FREQUENCY.html  constant.ADJ_MAXERROR.html  constant.ADJ_MICRO.html  constant.ADJ_NANO.html  constant.ADJ_OFFSET.html  constant.ADJ_OFFSET_SINGLESHOT.html  constant.ADJ_OFFSET_SS_READ.html  constant.ADJ_SETOFFSET.html  constant.ADJ_STATUS.html  constant.ADJ_TAI.html  constant.ADJ_TICK.html  (+6492 more)
rustdoc/newtype_uuid/: all.html  index.html  sidebar-items.js  struct.ParseError.html  struct.TagError.html  struct.Timestamp.html  struct.TypedUuid.html  struct.TypedUuidTag.html  trait.GenericUuid.html  trait.TypedUuidKind.html
rustdoc/newtype_uuid_macros/: all.html  index.html  macro.impl_typed_uuid_kinds!.html  macro.impl_typed_uuid_kinds.html  sidebar-items.js
rustdoc/prettyplease/: all.html  fn.unparse.html  index.html
rustdoc/proc_macro2/: all.html  enum.Delimiter.html  enum.Spacing.html  enum.TokenTree.html  index.html  struct.Group.html  struct.Ident.html  struct.LexError.html  struct.Literal.html  struct.Punct.html  struct.Span.html  struct.TokenStream.html
scripts/: commands.sh
src/: lib.rs
(+1789 files in other folders)
