[workspace]
resolver = "2"
members = [
    "crates/*",
]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/oxidecomputer/newtype-uuid"
documentation = "https://docs.rs/newtype-uuid"
rust-version = "1.79"

[workspace.dependencies]
datatest-stable = "0.3.2"
expectorate = "1.2.0"
heck = "0.5"
integration-tests = { path = "crates/integration-tests" }
newtype-uuid = { path = "crates/newtype-uuid" }
newtype-uuid-macros = { path = "crates/newtype-uuid-macros" }
prettyplease = "0.2.33"
proc-macro2 = "1.0"
quote = "1.0"
# Ideally we'd let you use no-std proptest, but proptest requires either the std
# or the no_std option to be set. It won't compile without one of those two set.
proptest = { version = "1.5.0", features = ["std"], default-features = false }
schemars = "0.8.17"
serde = "1"
serde_json = "1.0.140"
serde_tokenstream = "0.2.2"
syn = "2.0.101"
test-strategy = "0.4.1"
trybuild = "1.0"
typify = "0.4.2"
uuid = { version = "1.17.0", default-features = false }

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(doc_cfg)'] }
