[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
newtype-uuid = { version = "1.1.3", path = "../newtype-uuid" }
dropshot = { version = "0.10.0", optional = true }
expectorate = { version = "1.0.6", optional = true }
prettyplease = { version = "0.2.22", optional = true }
proptest = { version = "1.5.0", optional = true }
schemars = { version = "0.8.17", optional = true }
serde = { version = "1", optional = true }
serde_json = { version = "1.0.115", optional = true }
syn = { version = "2.0.48", optional = true }
test-strategy = { version = "0.4.0", optional = true }
typify = { version = "0.0.15", optional = true }
uuid = { version = "1.7.0", default-features = false }

[features]
internal-schemars08-tests = [
    "newtype-uuid/schemars08",
    "newtype-uuid/serde",
    "dep:dropshot",
    "dep:expectorate",
    "dep:prettyplease",
    "dep:schemars",
    "dep:serde_json",
    "dep:serde",
    "dep:syn",
    "dep:typify",
]
internal-proptest1-tests = [
    "newtype-uuid/proptest1",
    "dep:proptest",
    "dep:test-strategy",
]
