[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
newtype-uuid.workspace = true
dropshot = { workspace = true, optional = true }
expectorate = { workspace = true, optional = true }
prettyplease = { workspace = true, optional = true }
schemars = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
syn = { workspace = true, optional = true }
typify = { workspace = true, optional = true }

[features]
internal-schemars08-tests = [
    "newtype-uuid/schemars08",
    "newtype-uuid/serde",
    "dep:dropshot",
    "dep:expectorate",
    "dep:prettyplease",
    "dep:schemars",
    "dep:serde_json",
    "dep:serde",
    "dep:syn",
    "dep:typify",
]
