[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
newtype-uuid.workspace = true
uuid.workspace = true
newtype-uuid-macros.workspace = true
expectorate = { workspace = true, optional = true }
prettyplease = { workspace = true, optional = true }
proptest = { workspace = true, optional = true }
schemars = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
syn = { workspace = true, optional = true }
test-strategy = { workspace = true, optional = true }
trybuild.workspace = true
typify = { workspace = true, optional = true }

[features]
internal-schemars08-tests = [
    "newtype-uuid/schemars08",
    "newtype-uuid/serde",
    "dep:expectorate",
    "dep:prettyplease",
    "dep:schemars",
    "dep:serde_json",
    "dep:serde",
    "dep:syn",
    "dep:typify",
]
internal-proptest1-tests = [
    "newtype-uuid/proptest1",
    "dep:proptest",
    "dep:test-strategy",
]
