[package]
name = "newtype-uuid-macros"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
rust-version.workspace = true
description = "Procedural macros for newtype-uuid"

[lib]
proc-macro = true

[dependencies]
heck.workspace = true
newtype-uuid.workspace = true
proc-macro2.workspace = true
quote.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_tokenstream.workspace = true
syn = { workspace = true, features = ["full"] }
uuid = { workspace = true, features = ["v4"], optional = true }

[features]
default = []
v4 = ["dep:uuid", "newtype-uuid/v4"]

[dev-dependencies]
newtype-uuid = { workspace = true, features = ["v4"] }
uuid = { workspace = true, features = ["v4"] }
serde = { workspace = true, features = ["derive"] }

[[example]]
name = "basic_usage"
required-features = ["v4"]
