[package]
name = "newtype-uuid-macros"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/newtype-uuid-macros"
rust-version.workspace = true
description = "Procedural macro for newtype-uuid"
readme = "README.md"
keywords = ["uuid", "unique", "guid", "newtype"]

[lib]
proc-macro = true

[dependencies]
heck.workspace = true
proc-macro2.workspace = true
quote.workspace = true
serde.workspace = true
serde_tokenstream.workspace = true
syn = { workspace = true, features = ["full"] }

[dev-dependencies]
daft = { workspace = true, features = ["derive"] }
newtype-uuid = { workspace = true, features = ["v4"] }
serde = { workspace = true, features = ["derive"] }
static_assertions.workspace = true

[package.metadata.cargo-sync-rdme.badge.badges]
license = true
crates-io = true
docs-rs = true
rust-version = true
