[package]
name = "newtype-uuid"
version = "1.2.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/oxidecomputer/newtype-uuid"
description = "Newtype wrapper around UUIDs"
documentation = "https://docs.rs/newtype-uuid"
readme = "README.md"
keywords = ["uuid", "unique", "guid", "newtype"]
categories = ["data-structures", "no-std"]
rust-version.workspace = true
exclude = [".cargo/**/*", ".github/**/*", "scripts/**/*"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg=doc_cfg"]

[dependencies]
proptest = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
schemars = { workspace = true, features = ["uuid1"], optional = true }
uuid.workspace = true

[features]
default = ["uuid/default", "std"]
std = ["alloc", "uuid/std"]
alloc = []
v4 = ["uuid/v4"]
serde = ["dep:serde", "uuid/serde"]
schemars08 = ["dep:schemars", "std"]
proptest1 = ["dep:proptest"]
