[package]
name = "e2e-schema-consumer"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
e2e-kinds = { path = "../e2e-kinds" }
e2e-schema-producer = { path = "../e2e-schema-producer" }
newtype-uuid = { workspace = true, features = ["serde", "v4"] }
serde = { workspace = true, features = ["derive"] }
typify.workspace = true

[dev-dependencies]
expectorate.workspace = true

[package.metadata.release]
release = false
