[package]
name = "e2e-schema-producer"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
e2e-kinds = { path = "../e2e-kinds", features = ["schemars08"] }
schemars = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

[dev-dependencies]
expectorate.workspace = true

[features]
schemars08 = ["dep:schemars", "e2e-kinds/schemars08"]
